<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <parent>
        <artifactId>jokang-demos</artifactId>
        <groupId>jokang-demos</groupId>
        <version>1.0-SNAPSHOT</version>
        <!--<relativePath>../</relativePath>-->
    </parent>
    <modelVersion>4.0.0</modelVersion>

    <artifactId>spring3-demos</artifactId>
    <packaging>war</packaging>

    <properties>
        <spring.version>3.2.18.RELEASE</spring.version>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-core</artifactId>
            <version>${spring.version}</version>
        </dependency>
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-web</artifactId>
            <version>${spring.version}</version>
        </dependency>
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-webmvc</artifactId>
            <version>${spring.version}</version>
        </dependency>
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-tx</artifactId>
            <version>${spring.version}</version>
        </dependency>
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-jdbc</artifactId>
            <version>${spring.version}</version>
        </dependency>
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-aop</artifactId>
            <version>${spring.version}</version>
        </dependency>
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-test</artifactId>
            <version>${spring.version}</version>
            <scope>test</scope>
        </dependency>

        <!-- MyBatis -->
        <dependency>
            <groupId>org.mybatis</groupId>
            <artifactId>mybatis</artifactId>
            <version>3.4.6</version>
        </dependency>
        <!-- mysql -->
        <dependency>
            <groupId>mysql</groupId>
            <artifactId>mysql-connector-java</artifactId>
            <version>5.1.36</version>
        </dependency>
        <!-- Spring Mybatis整合-->
        <dependency>
            <groupId>org.mybatis</groupId>
            <artifactId>mybatis-spring</artifactId>
            <version>1.3.1</version>
        </dependency>
        <!-- 数据库连接池 alibaba 的 druid  -->
        <dependency>
            <groupId>com.alibaba</groupId>
            <artifactId>druid</artifactId>
            <version>1.1.18</version>
        </dependency>
        <!-- 测试 -->
        <dependency>
            <groupId>jokang-demos</groupId>
            <artifactId>mybatis-generator-demo</artifactId>
            <version>1.0-SNAPSHOT</version>
        </dependency>

        <dependency>
            <groupId>javax.servlet</groupId>
            <artifactId>servlet-api</artifactId>
            <version>2.5</version>
        </dependency>


    </dependencies>

    <build>
        <finalName>jokang-demos</finalName>
        <plugins>
            <plugin>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.1</version>
                <configuration>
                    <source>1.8</source>
                    <target>1.8</target>
                    <encoding>UTF-8</encoding>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.mortbay.jetty</groupId>
                <artifactId>jetty-maven-plugin</artifactId>
                <version>8.1.16.v20140903</version>
                <configuration>
                    <jvmArgs>-XX:+CMSClassUnloadingEnabled -XX:PermSize=512M -XX:MaxPermSize=512M
                    </jvmArgs>
                    <connectors>
                        <connector
                                implementation="org.eclipse.jetty.server.nio.SelectChannelConnector">
                            <port>9000</port>
                        </connector>
                    </connectors>
                    <stopPort>9090</stopPort>
                    <stopKey>a</stopKey>
                    <scanIntervalSeconds>0</scanIntervalSeconds>
                    <webApp>
                        <contextPath>/</contextPath>
                    </webApp>
                    <jettyXml>src/main/webapp/WEB-INF/jetty8.xml</jettyXml>
                    <reload>automatic</reload>
                    <scanIntervalSeconds>5</scanIntervalSeconds>
                    <!--<reload>manual</reload>-->
                </configuration>
            </plugin>
        </plugins>
        <!--<resources>-->
        <!--<resource>-->
        <!--<directory>src/main/java</directory>-->
        <!--<includes>-->
        <!--<include>**/*.xml</include>-->
        <!--</includes>-->
        <!--<filtering>true</filtering>-->
        <!--</resource>-->
        <!--<resource>-->
        <!--<directory>src/main/resources</directory>-->
        <!--&lt;!&ndash; 资源根目录排除各环境的配置，防止在生成目录中多余其它目录 &ndash;&gt;-->
        <!--<excludes>-->
        <!--<exclude>local/*</exclude>-->
        <!--<exclude>dev/*</exclude>-->
        <!--<exclude>test/*</exclude>-->
        <!--<exclude>stage/*</exclude>-->
        <!--<exclude>prod/*</exclude>-->
        <!--</excludes>-->
        <!--&lt;!&ndash; filtering=true根据profile根据参数动态修改 &ndash;&gt;-->
        <!--<filtering>true</filtering>-->
        <!--</resource>-->
        <!--</resources>-->
        <resources>
            <resource>
                <directory>src/main/resources/${conf-dir}</directory>
            </resource>
            <resource>
                <directory>src/main/resources/base</directory>
            </resource>
        </resources>
        <testResources>
            <testResource>
                <directory>src/test/resources</directory>
            </testResource>
        </testResources>
    </build>

    <profiles>
        <profile>
            <id>local</id>
            <activation>
                <activeByDefault>true</activeByDefault>
            </activation>
            <properties>
                <conf-dir>local</conf-dir>
            </properties>
        </profile>
        <profile>
            <id>dev</id>
            <properties>
                <conf-dir>dev</conf-dir>
            </properties>
        </profile>
        <profile>
            <id>beta</id>
            <properties>
                <conf-dir>beta</conf-dir>
            </properties>
        </profile>
        <profile>
            <id>test</id>
            <properties>
                <conf-dir>test</conf-dir>
            </properties>
        </profile>
        <profile>
            <id>staging</id>
            <properties>
                <conf-dir>staging</conf-dir>
            </properties>
        </profile>
        <profile>
            <id>prod</id>
            <properties>
                <conf-dir>prod</conf-dir>
            </properties>
        </profile>
    </profiles>

</project>